fix navbar collapse responsive, update styles, include bootstrap libraries, include styles for mobiles version, include employee search

--- a/frontend/employees/static/css/styles.css
+++ b/frontend/employees/static/css/styles.css
@@ -12,7 +12,6 @@
 html,
 body {
   width: 100%;
-  height: 100%;
   margin-top: 70px;
 }
 
@@ -29,23 +28,22 @@ body {
   width: 60%;
   height: 100%;
   min-width: 400px;
-
 }
 
 h1 {
-  font-size: 45px;
+  font-size: 40px;
   color: #1e7ab9;
-  font-weight: 900;
+  font-weight: 300;
   text-align: center;
-  /* margin: 40px 0; */
+  margin-bottom: 30px;
 }
 
 h2 {
-  font-size: 35px;
+  font-size: 30px;
   color: #2aabe1;
-  font-weight: 700;
+  font-weight: 300;
   text-align: left;
-  margin: 40px 0;
+  margin: 30px 0;
 }
 
 .container{
@@ -55,42 +53,43 @@ h2 {
 .labels{
   width: 20%;
   text-align: right;
-  font: 400 20px 'Roboto', sans-serif;
+  font: 300 20px 'Roboto', sans-serif;
   margin: 15px 10px;
-  color: #666;
+  color: #333;
 }
 
 input,
 button {
-  font: 400 20px 'Roboto', sans-serif;
+  font: 300 18px 'Roboto', sans-serif;
 }
 
 input {
   width: 70%;
   height: 40px;
   border-radius: 10px;
-  border: 1px solid #e1e4e8;
+  border: 1px solid #f0f0f0;
   color: #6a737d;
   padding: 0 24px;
   margin-right: 10px;
+
 }
 
 .btn {
   width: 100%;
   height: 50px;
   border-radius: 20px;
-  border: 1px solid #94d400;
   background-color: #94d400;
-  color: #fff;
+  color: #f1f1f1;
   cursor: pointer;
-  font-weight: 900;
-  font-size: 20px;
-  margin-top: 20px;
+  font-weight: 600;
+  font-size: 24px;
+  margin-top: 30px;
 }
 
 .btn:hover {
   opacity: 0.8;
-  color: #fff;
+  color: #f1f1f1;
+
 }
 
 #overlay{
@@ -99,15 +98,13 @@ input {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  
 }
 .employee_list{
   margin-top:40px;
-  /* background-color: brown; */
 }
 
 .employee_list ul {
-  font-family: "Roboto Mono", monospace;
+  font-family: "Roboto", monospace;
   list-style: none;
   font-size: 16px;
   color: #666;
@@ -123,23 +120,24 @@ input {
   border: 1px solid #e1e4e8;
   background-color: #fff;
   padding: 0 40px;
-  width: 100%;
+  width: 400px;
 }
 
 .employee_card p{
   font-size: 40px;
   margin-top: 10px;
-  color: #666;
+  color: #94d400;
 }
 
 .employee_card h4{
-  font-weight: 300;
-  color: #333;
+  font-weight: 600;
+  color: #666;
 }
 
 .employee_card h5{
-  font-weight: 900;
-  color: #94d400;
+  margin-top: 20px;
+  font-weight: 200;
+  color: #666;
 }
 
 /* ======= navbar =======  */
@@ -148,11 +146,33 @@ input {
   position: absolute;
   top: 0;
   width: 100%;
-  height: 60px;
+  height: 70px;
   min-width: 400px;
   background-color: #343a40;
-  font-family: "Roboto Mono", monospace;
+  font-family: "Roboto", monospace;
   font-weight: 300;
-  font-size: 18px;
+  font-size: 20px;
 
+}
+
+.bigbrand {
+  font-size: 25px;
+}
+
+#wait {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  background-image: url("../img/pulse.svg");
+  background-repeat: no-repeat;
+  background-position: center top;
+  z-index: 1;
+  display: none;
+  transform: translateX(-50%);
+}
+
+@media only screen and (min-width: 600px) {
+  #wait {
+    background-image: url("../img/spin.svg");
+  }
 }
